# price_formation

./: .env.sample  .flake8  README.md  pyproject.toml
config/: settings.py  urls.py
product/: admin.py  apiviews.py  constants.py  models.py  paginators.py  permissions.py  serializers.py  services.py  tests.py  urls.py  validators.py
product/migrations/: 0001_initial.py  0002_alter_product_discount_percentage.py
users/: apiviews.py  constants.py  models.py  permissions.py  serializers.py  services.py  tests.py  urls.py
users/management/commands/: ccsu.py
users/migrations/: 0001_initial.py
